# lofi.cafe

./: .dockerignore  .gitignore  Dockerfile  README.md  cache.py  main.py  pyproject.toml  youtube.py
docs/superpowers/plans/: 2026-05-04-lofi-cafe.md  2026-05-04-play-pause-button.md
docs/superpowers/specs/: 2026-05-04-lofi-cafe-design.md  2026-05-04-play-pause-button-design.md
static/: app.js  index.html  styles.css
tests/: test_api.py  test_cache.py  test_youtube.py
