[project]
name = "lofi-cafe"
version = "0.1.0"
description = "Self-hosted single-user lofi player"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "yt-dlp>=2024.04.09",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false
